2011-12-31  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gfile.R: uncomment multi argument. It is in gWIdgets now.

2011-12-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggraphics.R (.setDevNo): added argument do.rubber.banding
	through ... to suppress the rubber banding handler

2011-10-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (## getObjectFrom_h): change update method to
	include value of filter. Thanks Stephanie
	(idleHandler): reverted to idle handler -- as opposed to task
	callback -- so that all operations cause update

2011-09-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/icons.R: Remove assignInNamespace bits, replaced with environments

2011-09-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): had commented out them code for
	insert. Put back in. The code can take awhile, so called first
	time user requests it, not on startup.

2011-09-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R (addNewColumnDialog): fixed subset feature. Broken via
	change to gexpandgroup and height wasn't working. Thanks again to Stephanie!

2011-07-31  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtkStuff.R (getWidget): Added generics to process $, [[ and
	[[<- calls for working with undelrying RGtk2 widget.

2011-07-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R (addTreeViewColumnNoEdit): took out needless call to
	rownames (was giving error). Thanks Stephanie

2011-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (galert): When parent is a gwindow instance, this
	dialog now uses a GtkInfoBar instance. Requires gWidgets 0.0-46 or later.

2011-07-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (gbasicdialgo): Added do.buttons argument when run
	with no widget (preferred way).
