@@ -1,3 +1,8 @@
+2012-02-19  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/ggraphics.R (daDrawRectangle): put in code to find width and
+	height that should be more robust. We had issue with rubber banding.
+
 2011-12-31  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gfile.R: uncomment multi argument. It is in gWIdgets now.
